--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -39,5 +39,18 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2"
+  },
+  "serve": {
+    "builder": "@angular-devkit/build-angular:dev-server",
+    "configurations": {
+      "production": {
+        "buildTarget": "your-app:build:production"
+      },
+      "development": {
+        "buildTarget": "your-app:build:development",
+        "proxyConfig": "proxy.conf.json"
+      }
+    },
+    "defaultConfiguration": "development"
   }
 }
